# WorldAltar

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  SPEC.md  TASKS.md  launch-worldaltar.cmd  package-lock.json  package.json  tsconfig.json
apps/desktop/: eslint.config.mjs  index.html  package.json  prettier.config.mjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/desktop/public/offline-map/: manifest.json  style.json
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_entities.sql  0003_autosave.sql  0004_manuscript.sql
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/core/: database.rs  entity_model.rs  export.rs  manuscript.rs  mod.rs  projects.rs  repository.rs  time_engine.rs
apps/desktop/src/hooks/: useDeferredLensFlags.ts  useEntityActions.ts  useEntityDraft.ts  useEntityWorkspace.ts  useExportWorkspace.ts  useManuscriptBacklinks.ts  useManuscriptWorkspace.ts  useStartupRecovery.ts  useStoredProject.ts
apps/desktop/src/modules/: deferred-lenses.ts  features.ts  lenses.ts  mvp-lenses.ts
apps/desktop/src/modules/assets/: contracts.ts
apps/desktop/src/modules/canvas/: contracts.ts
apps/desktop/src/modules/database/: contracts.ts
apps/desktop/src/ui/: CanvasLens.tsx  CardGrid.tsx  CreateEntityStudio.tsx  EntityDetailPanel.tsx  ExportLens.tsx  LensRail.tsx  ManuscriptLens.tsx  RelationsLens.tsx  TimelineLens.tsx  YearDock.tsx
(+31 files in other folders)
